# SelfLensBahtinov

./: LICENSE  README.md  pyproject.toml
.github/workflows/: generate-mask.yml
docs/: bahtinov-algorithm.md  follow-up-issues.md  measurements.md
openscad/: bahtinov_pattern.scad  lens_mask.scad  mounting_ring.scad
profiles/: fujifilm-xf100-400.json  fujifilm-xf16-80.json
src/selflensbahtinov/: __init__.py  algorithms.py  cli.py  generator.py  models.py  openscad.py  renderer.py  validation.py
tests/: test_profiles.py  test_v1.py  test_validation.py
