[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selflensbahtinov"
version = "0.1.0"
description = "Parametric OpenSCAD generator for camera-lens Bahtinov masks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SelfLensBahtinov contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
selflensbahtinov = "selflensbahtinov.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/selflensbahtinov"]
